logs/validate.20260401-070516.log
error[E0277]: the trait bound `vstd::prelude::FnSpec<(usize, usize), usize>: vstd::prelude::Integer` is not satisfied
  --> src/experiments/named_fn_clone_bounds.rs:94:31
   |
94 |             Ghost(spec_max as spec_fn(usize, usize) -> usize),
   |                               ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ the trait `vstd::prelude::Integer` is not implemented for `vstd::prelude::FnSpec<(usize, usize), usize>`
   |
note: required by a bound in `vstd::prelude::spec_cast_integer`
  --> builtin/src/lib.rs:1088:0

error: aborting due to 1 previous error

For more information about this error, try `rustc --explain E0277`.
Elapsed: 18s
Sampled Memory Usage: peak rust_verify RSS: 1150MB, peak z3 RSS: 0MB, min free: 23106MB
Sampled CPU Usage: rust_verify: 18s, z3 children: 0s
